<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_100"
        android:padding="@dimen/icon_24dp">

        <ImageView
            android:id="@+id/loginIvAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap_l"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/loginTvTitle"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginIvAppLogo"
            android:layout_marginTop="@dimen/item_gap_m"
            android:gravity="left"
            android:scaleType="fitCenter"
            android:text="@string/lbl_login_title"
            android:textColor="@color/colorPrimaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTvTitle"
            android:layout_marginTop="@dimen/icon_24dp"
            app:errorEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                tools:text="anwar" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginTilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutEmail"
            android:layout_marginBottom="@dimen/item_gap_m"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:textSize="20sp"
                tools:text="anwar_poken17" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTilPassword"
            android:text="@string/sign_in"
            android:theme="@style/MyButton" />

        <TextView
            android:id="@+id/loginTvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignIn"
            android:layout_centerHorizontal="false"
            android:layout_marginBottom="@dimen/item_gap_s"
            android:layout_marginLeft="@dimen/item_gap_xs"
            android:layout_marginTop="@dimen/item_gap_l"
            android:text="@string/lbl_login_helper_not_have_account" />

        <Button
            android:id="@+id/loginBtnOpenRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTvOr"
            android:text="@string/btn_login_open_register_page"
            android:theme="@style/MyButton.Secondary" />

    </RelativeLayout>

</ScrollView>
