...
    <string name="no_items">Tidak ada data</string>
    <string name="paket">Booking</string>
    <string name="password">Password</string>
    <string name="please_insert_password">Silahkan masukkan password</string>
    <string name="please_insert_your_email">Silahkan masukkan email</string>
    <string name="register">Gabung Sekarang</string>
    <string name="sign_in">Login</string>
    <string name="title_activity_address_book">Buku Alamat</string>
    <string name="title_address_book">Buku Alamat</string>
    <string name="title_shipping_options">Pengiriman</string>


    <string name="lbl_transfer_to">Transfer ke</string>
...
    <string name="action_launch_edit_product">Edit Produk</string>
    <string name="btn_edit_product">Edit Produk</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_product_detail">Product Detail</string>

    <string name="btn_buy_now">Beli Sekarang</string>
    <string name="title_activity_shopping_cart">Troli</string>
    <string name="btn_continue_checkout">Lanjut ke Pembayaran</string>
    <string name="title_activity_order">Orderan</string>
    <string name="btn_pay_now">Bayar Sekarang</string>
    <string name="btn_order_received">Barang Diterima</string>
    <string name="btn_order_reture">Reture Barang </string>
    <string name="lbl_shipping_destination">Tujuan Pengiriman</string>
    <string name="lbl_seller_send_order">Nomor Resi Pengiriman</string>
    <string name="lbl_ordered_product_section">Barang Pesanan</string>
    <string name="lbl_shipping_method_section">Layanan Pengiriman</string>
    <string name="title_activity_payment">Pembayaran</string>
    <string name="title_activity_payment_confirm">Konfirmasi Pembayaran</string>
    <string name="title_activity_profile">Profil</string>
    <string name="btn_confirm_payment">Konfirmasi Pembayaran</string>
    <string name="lbl_quantity">Kuantitas: %1$d barang</string>
    <string name="title_activity_seller">Toko</string>
    <string name="title_activity_browse">Browse</string>
    <string name="btn_see_all_section_content">Lihat Semua</string>
    <string name="btn_retry_load_data">Coba lagi</string>
...
    <string name="hint_cart_add_note">Tambah catatan&#8230;</string>
    <string name="lbl_selected_product_extra_note">Catatan untuk penjual</string>
    <string name="lbl_register_title">Gratis, gabung dengan Poken sekarang juga.</string>
    <string name="lbl_login_title">Masuk ke Poken</string>
    <string name="lbl_login_helper_have_account_already">Sudah pernah gabung?</string>
    <string name="lbl_login_helper_not_have_account">Belum punya akun?</string>
    <string name="btn_login_open_login_page">Mulai Login</string>
    <string name="btn_login_open_register_page">Mulai Bergabung</string>
    <string name="btn_continue_shopping">Lanjut Belanja</string>
    <string name="lbl_product_stock">Stok: %d</string>
    <string name="lbl_product_detail_sold_out">Stok Habis</string>
    <string name="hint_addressbook_receiver_name">Atas Nama Peneriman</string>
    <string name="hint_addressbook_phone">Nomor telepon</string>
...
