...
            android:layout_marginBottom="@dimen/item_gap_s"
            android:layout_marginLeft="@dimen/item_gap_xs"
            android:layout_marginTop="@dimen/item_gap_l"
            android:text="@string/lbl_login_helper_have_account_already" />

        <Button
            android:id="@+id/registerEmailBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerEmailTvOr"
            android:text="@string/btn_login_open_login_page"
            android:textAllCaps="true"
            android:theme="@style/MyButton.Secondary" />
...
